--- a/app/src/main/res/layout/activity_win_screen.xml
+++ b/app/src/main/res/layout/activity_win_screen.xml
@@ -10,6 +10,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center_horizontal"
+        android:transitionName="photoToAnimate"
         android:layout_margin="30dp"
         app:scratchWidth="40dp">
 
